--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.19.8"
+    "sequelize": "^5.19.8",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
